# XtoNex-template

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: template-config.yml
.github/workflows/: python-tests.yml
frontend/: package-lock.json
tests/: test_logger.py
